crates/plotnik-lib/tests/02-parser/recovery_validation/field_name_with_dots.txt
(call foo.bar: (x))
------------------ DIAGNOSTICS -------------------
error: field names must be snake_case
 --> query.ptk:1:7
  |
1 | (call foo.bar: (x))
  |       ^^^^^^^
  |
help: use `foo_bar`
  |
1 - (call foo.bar: (x))
1 + (call foo_bar: (x))
  |
help: fields come from the grammar and are snake_case
